<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true" android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/activity_editar_nota_imageview"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/libreta" />

    <TextView
        android:id="@+id/activity_editar_nota_indicacion_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_nota"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorIcons"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/activity_editar_nota_cuerpo_edittext"
        android:layout_width="339dp"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:layout_marginStart="64dp"
        android:layout_marginTop="95dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/algo_que_olvides"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="20"
        android:text="" />

    <EditText
        android:id="@+id/activity_editar_nota_titulo_edittext"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:layout_marginStart="62dp"
        android:layout_marginTop="48dp"
        android:background="@null"
        android:ems="10"
        android:maxLines="2"
        android:gravity="top|left"
        android:hint="@string/titulo"
        android:inputType="textCapSentences|textMultiLine"
        android:textStyle="bold" />

    <Button
        android:id="@+id/activity_editar_nota_listobutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="372dp"
        android:background="@color/colorPrimary"
        android:text="@string/listo_mayus" />
</RelativeLayout>