<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/libreta"
    tools:context=".NotasActivity"
    android:focusable="true" android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/activity_notas_tab1_indicacion_edittext"
        android:layout_width="339dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:layout_marginStart="64dp"
        android:layout_marginTop="175dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/algo_que_olvides"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="20"
        android:text="" />

    <EditText
        android:id="@+id/activity_notas_tab1_indicacion_edittext2"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:layout_marginStart="62dp"
        android:layout_marginTop="133dp"
        android:background="@null"
        android:ems="10"
        android:maxLines="2"
        android:gravity="top|left"
        android:hint="@string/titulo"
        android:inputType="textCapSentences|textMultiLine"
        android:textStyle="bold" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:src="@mipmap/ic_addsincirculo" />

    <TextView
        android:id="@+id/activity_notas_tab1_indicacion_textview"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/nueva_nota"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorIcons"
        android:textSize="30sp" />

</RelativeLayout>